# Flamingo2

./: CMakeLists.txt  README.md
code/: common.hpp  core.cpp  core.hpp  foxtag.cpp  foxtag.hpp  imgprovider.cpp  imgprovider.hpp  imgprovider_prelinear.cpp  imgprovider_preweightcat.cpp  imgview.cpp  imgview.hpp  mainwindow.cpp  mainwindow.hpp  options.cpp  options.hpp  overlayer.cpp  overlayer.hpp  pixelscripter.cpp  pixelscripter.hpp  providerargs.cpp  providerargs.hpp  rwmutex.cpp  rwmutex.hpp  wallp.cpp  wallp.hpp
